# Cirbuild-Spec2RTL

./: .gitignore  Execution_dev.md  Implementation Plan v0.1.md  Implementation_Plan_v0.2.md  README.md  pyproject.toml  test_pipeline_alu.py
docs/: SPEC2RTL_CRITICAL_PATCH_02.md
memory/hls_fixes/: chroma.sqlite3
spec2rtl/: __main__.py  pipeline.py
spec2rtl/agents/: module1_understanding.py  module2_coding.py  module3_reflection.py  module4_optimization.py
spec2rtl/config/: default_config.yaml  settings.py
spec2rtl/core/: data_models.py
spec2rtl/hls/: reflection.py  xls.py
spec2rtl/llm/: llm_client.py
spec2rtl/memory/: __init__.py  long_term_memory.py  short_term_memory.py
spec2rtl/prompts/: hls_reflector.jinja2  module1_decomposer.jinja2  module1_descriptor.jinja2  module1_summarizer.jinja2  module1_verifier.jinja2  module2_cpp_coder.jinja2  module2_pseudocoder.jinja2  module2_python_coder.jinja2  module3_reflection.jinja2  module4_optimizer.jinja2
spec2rtl/tests/: test_code_utils.py  test_config.py  test_data_models.py  test_llm_client.py  test_long_term_memory.py  test_pdf_parser.py  test_xls.py
spec2rtl/utils/: code_utils.py  hls_formatter.py
