[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec2rtl"
version = "0.1.0"
description = "Spec-to-RTL translation tool using LLM-based HLS pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Spec2RTL Contributors"}
]
dependencies = [
    "pypdfium2>=4.0.0",
    "autogen-agentchat>=0.2.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
spec2rtl = "spec2rtl.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spec2rtl*"]
